# vtrack

./: .cz-config.js  .env.example  .gitignore  ALEMBIC_GUIDE.md  ALEMBIC_GUIDE_cd.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  MICROSERVICES_GUIDE.md  MICROSERVICES_README.md  MICROSERVICES_RESTRUCTURE_SUMMARY.md  MICROSERVICES_TEST_SUITE.md  MIGRATIONS_README.md  Makefile  NEXT_SESSION.md  README.md  REFACTOR_SESSION_2026-05-19.md  TEST_SUITE_SUMMARY.md  alembic.ini  commitlint.config.js  docker-compose.debug.yml  docker-compose.dev.yml  docker-compose.yml  migrate_cd.sh  package.json  pytest.ini  requirements.txt
.github/: README.md  markdown-link-check-config.json
.github/workflows/: docker-build.yml  linting.yml  tests.yml
alembic/: env.py
alembic/versions/: ab927e2e840d_initial_migration.py  c3f9a4b2e6f7_create_initial_tables.py
app/: alert_consumer.py  config.py  data_server.py  database.py  location_alerts.py  main.py  message_queue.py  metrics.py  models.py  monitoring.py  schedule.yaml  scheduler.py  scraper_async.py  tracing.py
app/domain/: ports.py  (+1 more)
data/: programmed_steps.json
docs/: README.md
previous-sprints/: REFACTOR_SESSION_2026-05-19.md  SPRINT_2026-05-19_20.md
scripts/: Makefile  Manual_cookie_to_json.html  microservices.sh  migrate.sh  redis_monitor.py  run_test_debug.py
shared-package/: MANIFEST.in  pyproject.toml  setup.py
shared-package/src/shared/: __init__.py  location_alerts.py  message_queue.py  zones.yaml
shared-package/src/vtrack_shared.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_main.py
(+109 files in other folders)
